# gtkclipblock

./: .gitmodules  README.md  c2xcompat.h  meson.build  meson.options
src/: main.c  meson.build
src/gtk2/: gtk2.c  gtk2.h  meson.build
src/gtk2/include/: gtk2.h
src/gtk3/: gtk3.c  gtk3.h  meson.build
src/gtk3/include/: gtk3.h
src/gtk4/: gtk4.c  gtk4.h  meson.build
src/gtk4/include/: gtk4.h
