option(
  'soname-suffix',
  type: 'string',
  description: 'A suffix to append to the library name.',
)
option(
  'gtk2',
  type: 'feature',
  description: 'Enables hooking GTK2 symbols.',
)
option(
  'gtk3',
  type: 'feature',
  description: 'Enables hooking GTK3 symbols.',
)
option(
  'gtk4',
  type: 'feature',
  description: 'Enables hooking GTK4 symbols.',
)
